--- a/src/options/options.html
+++ b/src/options/options.html
@@ -72,6 +72,6 @@
         </footer>
     </div>
     
-    <script src="options.js"></script>
+    <script type="module" src="options.ts"></script>
 </body>
 </html>
